--- a/Matamorphosis_generate.ipynb
+++ b/Matamorphosis_generate.ipynb
@@ -6,7 +6,7 @@
       "name": "Matamorphosis generate.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0AvOhf/KgvHVg84QQgG0Z",
+      "authorship_tag": "ABX9TyN//DP7kOtoQVos8EaOeSUj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         }
       },
       "source": [
-        "file_path = '/content/drive/My Drive/Colab Notebooks/Jason Brownlee/Text generator/metamorphosis_cleaned.txt'\n",
+        "file_path = '/content/drive/My Drive/Colab Notebooks/NLP/Text generator/metamorphosis_cleaned.txt'\n",
         "text = open(file_path,\"r\").read()\n",
         "text[0:100]"
       ],
@@ -732,10 +732,10 @@
       },
       "source": [
         "from tensorflow.keras.models import load_model\n",
-        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/Jason Brownlee/Text generator/matamorphosis_model.h5'\n",
+        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/NLP/Text generator/matamorphosis_model.h5'\n",
         "saved_model = load_model(filepath_to_model)"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
