--- a/Machine_translation.ipynb
+++ b/Machine_translation.ipynb
@@ -6,7 +6,7 @@
       "name": "Machine translation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUFhXbjGy0ztnPpi3/W8Jt",
+      "authorship_tag": "ABX9TyNbr3JUwHxw8ARLvpynXEq4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,29 +40,53 @@
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fo2eNNC8Kezj",
-        "outputId": "21bca1dc-e21b-4916-a0db-0997e97d89a8",
+        "id": "PYDl3WtSXRBU",
+        "outputId": "b4498b3f-86ea-4cf1-afde-4b5c068fdcff",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 462
         }
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")\n"
+        "!wget https://github.com/MaxOng94/NLP-projects/blob/master/Machine_translation.zip?raw=true -O 'Machine_translation.zip'\n",
+        "!unzip \"Machine_translation.zip\""
       ],
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "--2020-09-29 10:30:30--  https://github.com/MaxOng94/NLP-projects/blob/master/Machine_translation.zip?raw=true\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://github.com/MaxOng94/NLP-projects/raw/master/Machine_translation.zip [following]\n",
+            "--2020-09-29 10:30:30--  https://github.com/MaxOng94/NLP-projects/raw/master/Machine_translation.zip\n",
+            "Reusing existing connection to github.com:443.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Machine_translation.zip [following]\n",
+            "--2020-09-29 10:30:30--  https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Machine_translation.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 23757470 (23M) [application/zip]\n",
+            "Saving to: ‘Machine_translation.zip’\n",
+            "\n",
+            "Machine_translation 100%[===================>]  22.66M  33.5MB/s    in 0.7s    \n",
+            "\n",
+            "2020-09-29 10:30:31 (33.5 MB/s) - ‘Machine_translation.zip’ saved [23757470/23757470]\n",
+            "\n",
+            "Archive:  Machine_translation.zip\n",
+            "   creating: Machine translation/fra-eng/\n",
+            "  inflating: Machine translation/fra-eng/_about.txt  \n",
+            "  inflating: Machine translation/fra-eng/fra.txt  \n",
+            "  inflating: Machine translation/language_model.h5  \n"
           ],
           "name": "stdout"
         }
@@ -71,20 +95,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L1B3hTp-LakE"
-      },
-      "source": [
-        "file_path = \"/content/drive/My Drive/Colab Notebooks/Dataset/fra.txt\"\n"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "GtdCdwYjVwYn"
       },
       "source": [
+        "file_path = \"Machine translation/fra-eng/fra.txt\"\n",
+        "\n",
         "num_samples = 5000\n",
         "eng_inputs = []\n",
         "french_inputs= []\n",
@@ -104,7 +119,7 @@
         "        french_inputs.append(french_inputs_text)\n",
         "        french_targets.append(french_targets_text)\n"
       ],
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -140,7 +155,7 @@
         "tokenizer_encoder.fit_on_texts(eng_inputs)\n",
         "\n"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +167,7 @@
         "tokenizer_decoder = Tokenizer(num_words = 20000)\n",
         "tokenizer_decoder.fit_on_texts(french_targets+ french_inputs)\n"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +191,7 @@
         "decoder_vocab_size = len(decoder_token_index) +1\n",
         "latent_dim= 256"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +211,7 @@
         "print('Max sequence length for inputs:', max_encoder_seq_length)\n",
         "print('Max sequence length for outputs:', max_decoder_seq_length)"
       ],
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +242,7 @@
         "encoder_input_data= pad_sequences(sequences = eng_inputs_integers, maxlen = max_encoder_seq_length)\n",
         "print(encoder_input_data.shape)"
       ],
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +270,7 @@
         "                                   padding = 'post')\n",
         "print(decoder_target_data.shape)"
       ],
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +298,7 @@
         "                                  padding = 'post')\n",
         "print(decoder_input_data.shape)"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +330,7 @@
         "    dtype='float32')\n",
         "\n"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +344,7 @@
         "    decoder_target_one_hot[i,t,word]= 1\n",
         "    "
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +372,7 @@
         "  embeddings_dictionary[word] = vector_dimensions\n",
         "glove_file.close()"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +388,7 @@
         "  if embedding_vector is not None:\n",
         "    embedding_matrix[index]= embedding_vector"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +404,7 @@
       "source": [
         "embedding_matrix.shape"
       ],
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +428,7 @@
       "source": [
         "embedding_layer = Embedding(input_dim= encoder_vocab_size,output_dim=100, weights = [embedding_matrix],input_length = max_encoder_seq_length)"
       ],
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +467,7 @@
         "encoder_output,state_h,state_c = LSTM(latent_dim, return_state = True)(x)\n",
         "encoder_states = [state_h, state_c]"
       ],
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +498,7 @@
         "decoder_dense = Dense(decoder_vocab_size, activation = 'softmax')\n",
         "decoder_outputs = decoder_dense(decoder_outputs)"
       ],
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +509,7 @@
       "source": [
         "model = Model([encoder_inputs, decoder_inputs],decoder_outputs)"
       ],
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +520,7 @@
       "source": [
         "model.compile(optimizer = 'rmsprop', loss = 'categorical_crossentropy', metrics = ['accuracy'])"
       ],
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +537,7 @@
         "from keras.utils import plot_model\n",
         "plot_model(model, show_shapes=True, show_layer_names=True)"
       ],
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +563,7 @@
         "batch_size = 64\n",
         "epochs =1"
       ],
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -568,7 +583,7 @@
         "          epochs=epochs,\n",
         "          validation_split=0.2)"
       ],
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +621,7 @@
         "from google.colab import files\n",
         "files.download('language_model.h5')"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,10 +701,10 @@
       "source": [
         "from tensorflow.keras.models import load_model\n",
         "\n",
-        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/Jason Brownlee/Machine translation/language_model.h5'\n",
+        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/NLP/Machine translation/language_model.h5'\n",
         "model = load_model(filepath_to_model)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,7 +750,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +798,7 @@
         "decoder_embedding_weights= model.get_layer(name = 'embedding_4').get_weights()[0]\n",
         "decoder_embedding_weights.shape"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -839,7 +854,7 @@
         "    [decoder_outputs] + decoder_states\n",
         ")"
       ],
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +870,7 @@
       "source": [
         "plot_model(encoder_model,show_shapes = True, show_layer_names = True)"
       ],
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,13 +894,13 @@
         "outputId": "be220cfe-e946-4a42-feb4-a27a3c5a45d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 322
+          "height": 422
         }
       },
       "source": [
         "plot_model(decoder_model,show_shapes = True, show_layer_names = True)"
       ],
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,7 +926,7 @@
         "encoder_index2word = {v:k for k, v in encoder_token_index.items()} # k is word, v is the index\n",
         "decoder_index2word = {v:k for k, v in decoder_token_index.items()}"
       ],
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +973,7 @@
         "    states = [h,c]  \n",
         "  return ' '.join(output_sentence)"
       ],
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +989,7 @@
       "source": [
         "encoder_input_data[0:1].shape"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1022,7 @@
         "print(\"input\",eng_inputs[1])\n",
         "print(\"translation\", translation)"
       ],
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
