--- a/Machine_translation.ipynb
+++ b/Machine_translation.ipynb
@@ -6,7 +6,7 @@
       "name": "Machine translation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbr3JUwHxw8ARLvpynXEq4",
+      "authorship_tag": "ABX9TyMS2oMxEPgSJGL2p65TPzl+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -609,102 +609,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2X0xX3bGAWqz",
-        "outputId": "71bf01a4-9c59-4a1e-d833-c566b65e4354",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        }
-      },
-      "source": [
-        "model.save('language_model.h5')\n",
-        "from google.colab import files\n",
-        "files.download('language_model.h5')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_8c0f685b-ea92-4fa0-b39a-bd5fcb1525f2\", \"language_model.h5\", 19423920)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "aPeTuV19Vf7x"
       },
       "source": [
         "from tensorflow.keras.models import load_model\n",
         "\n",
-        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/NLP/Machine translation/language_model.h5'\n",
+        "filepath_to_model = 'Machine translation/language_model.h5'\n",
         "model = load_model(filepath_to_model)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
