--- a/Hotel_description_generator.ipynb
+++ b/Hotel_description_generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Hotel_description_generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEFLs2AOl1sPWuKoSI8a3u",
+      "authorship_tag": "ABX9TyNwHOoOdU3XMe0TyIrdvriK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,29 +36,43 @@
         "import pandas as pd \n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YqNHXiIkb8TZ",
-        "outputId": "df4c8dcc-384a-4fa2-f301-9d9baff4fa96",
+        "id": "4Nsgo-QNglbr",
+        "outputId": "1d86d2f9-aae7-4036-95df-b78bb1767d02",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 309
         }
       },
       "source": [
-        "from google.colab import drive \n",
-        "drive.mount('/content/drive')"
+        "!wget https://github.com/MaxOng94/NLP-projects/raw/master/Hotel_descriptions/Seattle_Hotels_dirty.csv?raw=true -O Seattle_Hotels_dirty.csv"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "--2020-09-29 11:04:00--  https://github.com/MaxOng94/NLP-projects/raw/master/Hotel_descriptions/Seattle_Hotels_dirty.csv?raw=true\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Hotel_descriptions/Seattle_Hotels_dirty.csv [following]\n",
+            "--2020-09-29 11:04:00--  https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Hotel_descriptions/Seattle_Hotels_dirty.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 159422 (156K) [text/plain]\n",
+            "Saving to: ‘Seattle_Hotels_dirty.csv’\n",
+            "\n",
+            "Seattle_Hotels_dirt 100%[===================>] 155.69K  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2020-09-29 11:04:00 (3.58 MB/s) - ‘Seattle_Hotels_dirty.csv’ saved [159422/159422]\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -68,19 +82,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "fDdioe_kcIzj",
-        "outputId": "fce74b56-245a-48fa-ec35-f84fdf4d7e7d",
+        "outputId": "2935406a-f6d0-4e7a-9697-643e0c80e0af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
         }
       },
       "source": [
-        "file_path = '/content/drive/My Drive/Colab Notebooks/NLP/Hotel_description_generator/Seattle_Hotels_dirty.csv'\n",
+        "file_path = 'Seattle_Hotels_dirty.csv'\n",
         "\n",
         "df = pd.read_csv(file_path,encoding='unicode_escape')\n",
         "df.head(5)"
       ],
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -158,7 +172,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 19
         }
       ]
     },
@@ -781,21 +795,64 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "cf084PpCiSkQ",
+        "outputId": "cde501ca-7ed3-47b8-c654-c95653ab51ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 377
+        }
+      },
+      "source": [
+        "!wget https://github.com/MaxOng94/NLP-projects/blob/master/Hotel_descriptions/hotel_desc.h5?raw=true -O hotel_desc.h5"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2020-09-29 11:04:57--  https://github.com/MaxOng94/NLP-projects/blob/master/Hotel_descriptions/hotel_desc.h5?raw=true\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://github.com/MaxOng94/NLP-projects/raw/master/Hotel_descriptions/hotel_desc.h5 [following]\n",
+            "--2020-09-29 11:04:57--  https://github.com/MaxOng94/NLP-projects/raw/master/Hotel_descriptions/hotel_desc.h5\n",
+            "Reusing existing connection to github.com:443.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Hotel_descriptions/hotel_desc.h5 [following]\n",
+            "--2020-09-29 11:04:58--  https://raw.githubusercontent.com/MaxOng94/NLP-projects/master/Hotel_descriptions/hotel_desc.h5\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4679756 (4.5M) [application/octet-stream]\n",
+            "Saving to: ‘hotel_desc.h5’\n",
+            "\n",
+            "hotel_desc.h5       100%[===================>]   4.46M  13.6MB/s    in 0.3s    \n",
+            "\n",
+            "2020-09-29 11:04:59 (13.6 MB/s) - ‘hotel_desc.h5’ saved [4679756/4679756]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "0hmV-5Yzmzm4"
       },
       "source": [
         "from tensorflow.keras.models import load_model\n",
-        "filepath_to_model = '/content/drive/My Drive/Colab Notebooks/NLP/Hotel_description_generator/hotel_desc.h5'\n",
+        "filepath_to_model = 'hotel_desc.h5'\n",
         "saved_model = load_model(filepath_to_model)"
       ],
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "onMIDEF0uRGc",
-        "outputId": "794e15bd-7917-4e8e-8ee3-8b02e7e830e6",
+        "outputId": "f5d588a9-b0f3-4dfc-b5d5-a5a97c9c157b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -804,7 +861,7 @@
       "source": [
         "saved_model.summary()"
       ],
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
