--- a/Machine_translation.ipynb
+++ b/Machine_translation.ipynb
@@ -6,7 +6,7 @@
       "name": "Machine translation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMS2oMxEPgSJGL2p65TPzl+",
+      "authorship_tag": "ABX9TyOfZguIP1FQxQue1Q4IjdEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
         "!wget https://github.com/MaxOng94/NLP-projects/blob/master/Machine_translation.zip?raw=true -O 'Machine_translation.zip'\n",
         "!unzip \"Machine_translation.zip\""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "        french_inputs.append(french_inputs_text)\n",
         "        french_targets.append(french_targets_text)\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +354,7 @@
       },
       "source": [
         "We will use Glove's trained embedding matrix value as our weights for the embedding layer.\n",
-        "Our embedding matrix will have dimension 100, thus we select the 100 dimension glove weight matrix."
+        "Chose the 100 dimension embedding matrix."
       ]
     },
     {
@@ -561,7 +561,7 @@
       },
       "source": [
         "batch_size = 64\n",
-        "epochs =1"
+        "epochs =10"
       ],
       "execution_count": null,
       "outputs": []
@@ -617,7 +617,7 @@
         "filepath_to_model = 'Machine translation/language_model.h5'\n",
         "model = load_model(filepath_to_model)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,10 +634,9 @@
         "*   This means that we have to modify the decoder's architect. \n",
         "*   Each time step will receive the previous time step's output and input, as well as the hidden and cell state of the previous time step. \n",
         "\n",
-        "2) We will also need to modify the input shape for our embedding layer in our decoder. Since at each time step we are \n",
+        "2) We will also need to modify the input shape for our embedding layer in our decoder. Now we are taking in 1 input at a time.\n",
         "\n",
-        "\n",
-        "You will notice that during the creation of the model for prediction, we are reusing some of the layers that we ALREADY TRAINED in our training phase. \n",
+        "Notice that during the creation of the model for prediction, we are reusing some of the layers that we ALREADY TRAINED in our training phase. This is obvious, as we are using the weights we trained in our decoder to output the translations. \n",
         "\n",
         "Specifically, we re-use the \n",
         "\n",
@@ -646,6 +645,8 @@
         "2) decoder_lstm layer in the previously trained decoder model \n",
         "\n",
         "3) decoder_dense layer in the previously trained decoder model\n",
+        "\n",
+        "4) The entire encoding model.\n",
         "\n",
         "\n"
       ]
