--- a/Hotel_description_generator.ipynb
+++ b/Hotel_description_generator.ipynb
@@ -6,7 +6,7 @@
       "name": "Hotel_description_generator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwHOoOdU3XMe0TyIrdvriK",
+      "authorship_tag": "ABX9TyM8htx8IJkPg1Wmo8TiziQl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "import pandas as pd \n",
         "import numpy as np"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
       "source": [
         "!wget https://github.com/MaxOng94/NLP-projects/raw/master/Hotel_descriptions/Seattle_Hotels_dirty.csv?raw=true -O Seattle_Hotels_dirty.csv"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
         "df = pd.read_csv(file_path,encoding='unicode_escape')\n",
         "df.head(5)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +805,7 @@
       "source": [
         "!wget https://github.com/MaxOng94/NLP-projects/blob/master/Hotel_descriptions/hotel_desc.h5?raw=true -O hotel_desc.h5"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         "filepath_to_model = 'hotel_desc.h5'\n",
         "saved_model = load_model(filepath_to_model)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -861,7 +861,7 @@
       "source": [
         "saved_model.summary()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
         "    # truncate the sequence to fixed length \n",
         "    # because we are adding the new output text to the end of our previous input text, \n",
         "    # we will always remove a word from the start of the input text to ensure that the size \n",
-        "    # remains at 50 \n",
+        "    # remains at the seq_length == 490\n",
         "    encoded = pad_sequences([encoded], maxlen = seq_length, truncating = \"pre\")\n",
         "    # use predict_class \n",
         "    #yhat = model.predict_classes(encoded, verbose = 0)\n",
